--- a/HouseManage/HouseManage/Views/MyShop/ShopDetail.cshtml
+++ b/HouseManage/HouseManage/Views/MyShop/ShopDetail.cshtml
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="~/wxstatic/css/mui.min.css">
     <link rel="stylesheet" href="~/wxstatic/css/mui.picker.css">
     <link rel="stylesheet" href="~/wxstatic/css/mui.poppicker.css">
+    <link href="~/wxstatic/css/mui.loading.css" rel="stylesheet" />
     <script src="~/wxstatic/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <style>
         /*隐藏google touch事件错误*/
@@ -24,6 +25,7 @@
         a {
             text-decoration: none
         }
+
         .mui-placeholder {
             font-size: 14px;
         }
@@ -92,6 +94,14 @@
                         <label>资产值</label>
                         <input type="text" class="mui-input-clear" tid="ZCYZ">
                     </div>
+                    <div class="mui-input-row">
+                        <label>剩余水量</label>
+                        <input type="text" class="mui-input-clear" tid="WaterInfo">
+                    </div>
+                    <div class="mui-input-row">
+                        <label>剩余电费</label>
+                        <input type="text" class="mui-input-clear" tid="ElecInfo">
+                    </div>
                 </div>
                 <div id="item3" class="mui-control-content">
                     <div class="mui-input-row">
@@ -117,6 +127,7 @@
     <script src="~/wxstatic/js/mui.min.js"></script>
     <script src="~/wxstatic/js/mui.picker.js"></script>
     <script src="~/wxstatic/js/mui.poppicker.js"></script>
+    <script src="~/wxstatic/js/mui.loading.js"></script>
     <script>
         jq = $;
         //mui
@@ -141,7 +152,7 @@
             var setData = function (list) {
                 var info = [];
                 jq.each(list, function (idx, val) {
-                    info.push({ text: val["FWMC"], value: val["FWID"]});
+                    info.push({ text: val["FWMC"], value: val["FWID"] });
                 });
                 picker.setData(info);
                 if (list.length > 0) {
@@ -163,6 +174,7 @@
                     jq("[tid='FWSX']").val(fwsx == 0 ? '空闲' : (fwsx == 1 ? '出租' : '出售'));
                     jq("[tid='JYNR']").text(showData[0]['JYNR']);
                     //jq("[tid='SHOP_STATUS']").text(shopStatu);
+                    ShowWaterAndElectricity(showData[0]['WATER_NUMBER'], showData[0]['CID'], showData[0]['ELE_NUMBER']);
                 }
             }
             var setValue = function (data, title) {
@@ -170,6 +182,34 @@
                 if (Title != null && Title != "" && Title != undefined) {
                     jq("[tid='" + title + "']").val(Title);
                 }
+            }
+
+            var ShowWaterAndElectricity = function (wId, cId, eleId) {
+                // get info about waterid
+                window.post("GetWater", { WaterId: wId }, function (data) {
+                    if (data != null) {
+                        jq("[tid='WaterInfo']").val(data.MeterAccflow || "");
+                    }
+                });
+                window.post("GetElectricity", { CollectId: cId, ElectricityId: eleId }, function (data) {
+                    if (data != null) {
+                        jq("[tid='ElecInfo']").val(data.EleBalance || "");
+                    }
+                })
+            }
+
+            window.post = function (url, data, callback, failcallback) {
+                mui.showLoading();
+                $.post(url, data, function (res) {
+                    mui.hideLoading();
+                    if (res.code == 1000) {
+                        callback(res.data || null);
+                    } else {
+                        if (typeof (failcallback) == "function") {
+                            failcallback(res);
+                        }
+                    }
+                })
             }
             $.post("GetShopDetails", function (result) {
                 List = result;
