--- a/HouseManage/HouseManage/Views/Orders/SelfPay.cshtml
+++ b/HouseManage/HouseManage/Views/Orders/SelfPay.cshtml
@@ -200,25 +200,6 @@
                     }
                 })
             },
-            payed: function () {
-                    //res.err_msg将在用户支付成功后返回ok，但并不保证它绝对可靠。
-                    var btnArray = ['否', '是'];
-                    mui.confirm('是否已付款？', '提示', btnArray, function (e) {
-                        if (e.index == 1) {
-                            var i = 5;
-                            setInterval(function () {
-                                if (i != 0) {
-                                    mui.showLoading("正在检测订单状态， " + i + "秒！");
-                                    i--;
-                                } else {
-                                    location.reload();
-                                }
-                            }, 1100);
-                        } else {
-                            mui.hideLoading();
-                        }
-                    })
-            },
             createOrder: function () {
                 var self = this;
                 this.post("CreateOrder", self.model,function (res) {
@@ -230,11 +211,12 @@
                     var data = res.data || null;
                     if (data != null) {
                         self.Sign = data.sign;
+                        self.orderId = data.sign.out_trade_no;
+                        self.oId = data.sign.Id;
                         if (self.Sign == null) {
                             mui.hideLoading();
                             mui.alert("预支付失败！", "提示");
                         }
-                        self.payed();
                         mui.showLoading("订单支付中");
                         self.payInit();
                     } else {
@@ -264,10 +246,33 @@
                         if (res.err_msg == "get_brand_wcpay_request:ok") {
                             payed = true;
                             console.log(res);
+                            setTimeout(function () { // 延迟1秒，留给服务器时间。
+                                self.checkOrder();
+                            },1000);
+                            mui.showLoading("正在检查支付状态");
                         } else {
                             mui.alert("支付失败！", "提示");
                         }
                     });
+            },
+            checkOrder: function () {
+                var self = this;
+                this.post("CheckOrderStatus", { orderId: self.orderId }, function (res) {
+                    if (res == null || res.code != 1000) {
+                        mui.hideLoading();
+                        mui.alert("订单状态检查失败，订单号：" + self.orderId, "提示");
+                        return;
+                    }
+                    var data = res.data || null;
+                    if (data) {
+                        mui.showLoading("支付成功！");
+                        window.location.href = "Order/" + self.oId;
+                    } else {
+                        mui.hideLoading();
+                        mui.alert("当前订单未支付！", "提示");
+                        return;
+                    }
+                });
             }
         }
         pageModel.Init();
